# web_portfolio

./: .gitignore  LICENSE  README.md  pyproject.toml
portfolio_blog/: admin.py  apps.py  models.py  urls.py  views.py
portfolio_blog/migrations/: 0001_initial.py
portfolio_blog/static/css/: portfolio_blog.css
portfolio_blog/templates/portfolio_blog/: post_article.html
website/: settings.py  urls.py
