[tool.poetry]
name = "web_portfolio"
version = "0.1.0"
description = "The idea of this project is to provide a small portfolio/curriculum website and best programming practices and studies."
authors = ["Ralph dos Santos Souza"]
license = "MIT License"

[tool.poetry.dependencies]
python = "^3.9"
Django = "^3.2.8"
django-restframework = "^0.0.1"
pytest = "^6.2.5"
unittest = "^0.0"
psycopg2 = "^2.9.1"
psycopg2-binary = "^2.9.1"
django-rest-framework = "^0.1.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
